--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {
-    background: #eee;
+    overflow: hidden;
+	width: 100%;
+	height: 100%;
 }
 
 body {
@@ -9,6 +11,8 @@ body {
     font-size: 1.2em;
     line-height: 1.5em;
     margin: 0;
+	width: 100%;
+	overflow: hidden;
 }
 
 article, footer {
