--- a/sharemodel.css
+++ b/sharemodel.css
@@ -56,7 +56,7 @@
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #0205a1;
   color: white;
 }
 
@@ -64,6 +64,6 @@
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #0205a1;
   color: white;
 }
